fixed dark mode login text

--- a/frontend/src/styles/Dark.mode.css
+++ b/frontend/src/styles/Dark.mode.css
@@ -15,6 +15,16 @@ body.body-dark-mode .privacy-page-dark p {
   color: #f8f9fa;
 }
 
+body.body-dark-mode .privacy-page-dark p {
+  background-color: #343a40;
+  color: #f8f9fa;
+}
+
+body.body-dark-mode .notes-page-logged-out-view p {
+  background-color: #343a40;
+  color: #f8f9fa;
+}
+
 /* Define basic button styling */
 .btn {
   padding: 10px 20px;
